# Vision_self_distillation

./: .gitignore  Makefile  README.md  corruption.py  divergence.py  pyproject.toml  requirements.txt  trainer.py
configs/accelerate/: ddp.yaml  single_gpu.yaml  zero2.yaml  zero3.yaml
configs/eval/: urbanvideo.yaml  video_suite.yaml
configs/train/: RUN_PLAN.md  caad_fullft_qwen25vl7b.yaml  caad_lora_qwen25vl3b.yaml  caad_lora_qwen25vl7b.yaml  caad_lora_qwen25vl7b_rl.yaml  smoke.yaml
docs/: Research scope Analysis.docx  design.md
paper/: caad_proposal.tex  iclr2026_conference.bib
scripts/: eval.sh  train.sh  train_rl.sh  upload_checkpoint.sh  vllm_serve.sh
scripts/slurm/: submit.sh  train.sbatch
src/caad/: __init__.py  rollout.py  train.py
src/caad/data/: corruption.py  dataset.py
src/caad/eval/: metrics.py  orchestrate.py  run_task.py
src/caad/eval/tasks/: registry.py  urbanvideo.py  video_qa.py
src/caad/losses/: divergence.py
src/caad/models/: model_utils.py
src/caad/trainers/: base.py  caad.py
src/caad/utils/: config.py  logging.py  seeding.py
src/caad/viz/: plots.py
tests/: test_config.py  test_corruption.py  test_divergence.py  test_metrics.py
